--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -9,7 +9,7 @@
       </li>
 
       <li routerLinkActive="active">
-        <a class="buttonEffet butHover" routerLink="products">products</a>
+        <a class="buttonEffet butHover" routerLink="pageconservation">page de conservation</a>
       </li>
       <li routerLinkActive="active">
         <a class="buttonEffet butHover" routerLink="/listerecettes">recettes</a>
@@ -23,14 +23,10 @@
     </ul>
     <ul class="nav navbar-nav navbar-right rounded-pill">
       <li>
-        <a class="enrButton" href="#"
-          ><span class="glyphicon glyphicon-user"></span> s'enregistrer</a
-        >
+        <a class="enrButton" href="#"><span class="glyphicon glyphicon-user"></span> s'enregistrer</a>
       </li>
       <li>
-        <a class="conneButton text-center" href="/auth"
-          ><span class="glyphicon glyphicon-log-in"></span> Connexion</a
-        >
+        <a class="conneButton text-center" href="/auth"><span class="glyphicon glyphicon-log-in"></span> Connexion</a>
       </li>
     </ul>
   </div>
